--- a/PlaninarskoDrustvoWEB/src/main/resources/application.properties
+++ b/PlaninarskoDrustvoWEB/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.jsp
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=2411
+server.servlet.context-path=/PD
+server.port=8080
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
